--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -17,10 +17,10 @@
     <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">Type</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
+      <th scope="col">Cascos</th>
+      <th scope="col">Cascos 1</th>
+      <th scope="col">Cascos II</th>
+      <th scope="col">casccos III</th>
     </tr>
   </thead>
   <tbody>
