--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -24,8 +24,8 @@
    
       </ul>
       <form class="d-flex">
-        <input class="form-control me-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control me-sm-2" type="search" placeholder="Buscar">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
   </div>
@@ -34,13 +34,13 @@
 <div id="carouselExampleInterval" class="carousel slide d-flex justify-content-between p-4" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="../public/img/1.jpg" class="d-block w-100" width="200" height="300" alt="productos">
+      <img src="" class="d-block w-100" width="200" height="300" alt="productos">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="../public/img/1.jpg" class="d-block w-100" width="200" height="300" alt="productos">
+      <img src="" class="d-block w-100" width="10" height="30" alt="productos">
     </div>
     <div class="carousel-item">
-      <img src="../public/img/1.jpg" class="d-block w-100"width="200" height="300"  alt="productos">
+      <img src="" class="d-block w-100"width="200" height="300"  alt="productos">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -57,39 +57,37 @@
 {{!-- estas mis cards--}}
     <section class="d-flex justify-content-between p-4 bg-primary">
         <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-            <div class="card-header">Header</div>
+            <div class="card-header">Titulo</div>
                 <div class="card-body">
-                    <h4 class="card-title">Primary card title</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h4 class="card-title">Descripciones</h4>
+                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. .</p>
                 </div>
             </div>
 
         <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
-                 <div class="card-header">Header</div>
+                 <div class="card-header">Titulo II</div>
                   <div class="card-body">
-                 <h4 class="card-title">Success card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                 <h4 class="card-title">Otro producto 2</h4>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. ..</p>
              </div>
             </div>
 
 
              <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-             <div class="card-header">Header</div>
+             <div class="card-header">Titulo III</div>
              <div class="card-body">
-                  <h4 class="card-title">Warning card title</h4>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Otro producto</h4>
+               <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. ..</p>
              </div>
             </div>
   </section>
   <!-- end of cards -->
 
 <section class=" d-flex justify-content-between p-4">
-        <h2>Example body text</h2>
-            <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                        <p><small>This line of text is meant to be treated as fine print.</small></p>
-                    <p>The following is <strong>rendered as bold text</strong>.</p>
-               <p>The following is <em>rendered as italicized text</em>.</p>
-        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        
+            <p>Historia <a href="#">Comercio</a>1885 Gottlieb Daimler Reitwagen
+Está considerada como la primera moto de la historia, aunque hubo algunos inventos anteriores con motores de vapor. La denominó Reitwagen, algo así como vehículo montable, y fue la primera en estar propulsada por un motor de combustión interna alimentado por gasolina..</p>
+                       
 </section>
 </div>
 
@@ -108,7 +106,7 @@
              >
       <!-- Left -->
       <div class="me-5">
-        <span>Get connected with us on social networks:</span>
+        <span>Seguinos en nuestras redes:</span>
       </div>
       <!-- Left -->
 
@@ -145,15 +143,13 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold">Company name</h6>
+            <h6 class="text-uppercase fw-bold">Solo Motos</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
             <p>
-              Here you can use rows and columns to organize your footer
-              content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.
+             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque praesentium quidem earum, suscipit, blanditiis doloribus, autem eos corporis aliquid asperiores enim vero quibusdam delectus temporibus architecto maiores mollitia repellendus. Placeat?
             </p>
           </div>
           <!-- Grid column -->
@@ -161,22 +157,22 @@
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold">Products</h6>
+            <h6 class="text-uppercase fw-bold">Productos</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
             <p>
-              <a href="#!" class="text-white">MDBootstrap</a>
+              <a href="#!" class="text-white">Accesorios</a>
             </p>
             <p>
-              <a href="#!" class="text-white">MDWordPress</a>
+              <a href="#!" class="text-white">Ruta</a>
             </p>
             <p>
-              <a href="#!" class="text-white">BrandFlow</a>
+              <a href="#!" class="text-white">Conurbano</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Bootstrap Angular</a>
+              <a href="#!" class="text-white">Trabajo</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -184,22 +180,22 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold">Useful links</h6>
+            <h6 class="text-uppercase fw-bold">LInks importantes</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
             <p>
-              <a href="#!" class="text-white">Your Account</a>
+              <a href="#!" class="text-white">Tu Cuenta</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Become an Affiliate</a>
+              <a href="#!" class="text-white">Registrate</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Shipping Rates</a>
+              <a href="#!" class="text-white">Ventas online</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Help</a>
+              <a href="#!" class="text-white">Ayuda</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -207,12 +203,12 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold">Contact</h6>
+            <h6 class="text-uppercase fw-bold">Contacto</h6>
             <hr
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
-            <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+            <p><i class="fas fa-home mr-3"></i> Av siempre viva, 123</p>
             <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
             <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
             <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
@@ -231,7 +227,7 @@
          >
       © 2023 Copyright:
       <a class="text-white" href="https://mdbootstrap.com/"
-         >MDBootstrap.com</a
+         >Solo Motos</a
         >
     </div>
     <!-- Copyright -->
