Cookies, Session & Storage II

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -37,7 +37,7 @@
       <img src="" class="d-block w-100" width="200" height="300" alt="productos">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="" class="d-block w-100" width="10" height="30" alt="productos">
+      <img src="" class="d-block w-100" width="10" height="300" alt="productos">
     </div>
     <div class="carousel-item">
       <img src="" class="d-block w-100"width="200" height="300"  alt="productos">
@@ -85,8 +85,7 @@
 
 <section class=" d-flex justify-content-between p-4">
         
-            <p>Historia <a href="#">Comercio</a>1885 Gottlieb Daimler Reitwagen
-Está considerada como la primera moto de la historia, aunque hubo algunos inventos anteriores con motores de vapor. La denominó Reitwagen, algo así como vehículo montable, y fue la primera en estar propulsada por un motor de combustión interna alimentado por gasolina..</p>
+            <p class="text-center">El ingeniero alemán Daimler fabricó en 1885 la primera motocicleta de la historia con motor: un vehículo de dos ruedas, con cuadro de madera, sobre el que monta un motor de explosión cuyo movimiento se transmite a la rueda trasera mediante una correa. El motor iba situado verticalmente entre las dos ruedas.</p>
                        
 </section>
 </div>
