--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,12 +1,6 @@
 <div>
-    <h1>Regístrate</h1>
+    <h1>Logueate! </h1>
 {{!-- action="/api/users" method="post" --}}
-    <form id="registerForm" >
-    <label >Nombre</label>
-    <input name="firstName">
-
-     <label >Apellido</label>
-    <input name="lastName">
 
      <label >User</label>
     <input name="name">
@@ -14,7 +8,7 @@
      <label >Pass</label>
     <input type="password">
 
-     
+      
      <label >Email</label>
     <input type="email">
 
