autenticacion por terceros

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <div>
     <h1>Logueate! </h1>
 {{!-- action="/api/users" method="post" --}}
-
+<form >
      <label >User</label>
     <input name="name">
 
