--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="css/{{css}}.css ">
+    {{!-- <link rel="stylesheet" href="css/{{css}}.css "> --}}
 </head>
     <body>
 
